mdapipkg/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Brand_Interest__c</fullName>
        <label>Brand Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cent Pur Cent</fullName>
                </value>
                <value>
                    <fullName>i.am.klean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Start_Date__c</fullName>
        <formula>Account.Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_s_Address__c</fullName>
        <formula>Billing_Address__Street__s &amp;  BR() &amp;
Billing_Address__City__s &amp; BR() &amp;
Billing_Address__PostalCode__s &amp;  BR() &amp;
 TEXT(Billing_Address__CountryCode__s)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer&apos;s Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Email__c</fullName>
        <formula>Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_s_Telephone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer&apos;s Telephone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Oppty_after_lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Oppty after lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Happy_Client_Support__c</fullName>
        <label>Happy Client Support</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Retrigger_After_Package_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Retrigger After Package Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used if the Sales wants to change the price list used</description>
        <label>New Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Odoo_ID__c</fullName>
        <externalId>true</externalId>
        <label>Odoo ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDF__c</fullName>
        <label>PDF</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_update_Yearly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox set to true if products need to be added for a yearly package</description>
        <label>Product update (Yearly)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox set to true if a product update is needed after a pricebook change (for non yearly oppties)</description>
        <label>Product update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_To_Odoo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To Odoo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Starter_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starter Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yearly_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox set to true if the opportunity is a yearly opportunity</description>
        <label>Yearly Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Brand_Interest__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Brand_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Brand_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Brand_Interest__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
</CustomObject>